--- a/profile-app/mongo-secret.yml
+++ b/profile-app/mongo-secret.yml
@@ -5,6 +5,4 @@ metadata:
 type: Opaque
 data:
   mongo-user: bW9uZ291c2Vy
-  mongo-pass: bW9uZ29wYXNz
----
-
+  mongo-password: bW9uZ29wYXNzd29yZA==
