--- a/profile-app/mongo.yml
+++ b/profile-app/mongo.yml
@@ -29,7 +29,7 @@ spec:
           valueFrom:
             secretKeyRef:
               name: mongo-secret
-              key: mongo-pass
+              key: mongo-password  
 ---
 apiVersion: v1
 kind: Service
